<?xml version="1.0" encoding="utf-8"?>
<resources>

	
    <!-- Titles -->
    <string name="app_name">Pixceed</string>
    <string name="title_activity_album">Album</string>
    <string name="title_activity_settings">Einstellungen</string>
    <string name="title_activity_library">Alle Bilder</string>
    
    <!-- login -->
    <string name="loginName">E-Mail-Adresse:</string>
    <string name="loginPassword">Password:</string>
    <string name="saveLoginName">Eingeloggt bleiben</string>
    <string name="login">Anmelden</string>
    <string name="relogin">Wiederanmelden</string>

	<!-- menu -->
    <string name="action_forward">Vor</string>
    <string name="action_back">Zurück</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_refresh">Neu laden</string>
    <string name="action_logout">Ausloggen</string>

    <!-- colors -->
    <color name="white">#FFFFFFFF</color>
    <color name="black">#FF000000</color>
    <color name="black_transparent">#AA000000</color>
    
    <string name="pref_wifi">Nur bei WLAN-Verbindung?</string>

</resources>