<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pixceed.LoginActivity" >

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="25"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="50"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_action_cancel"
        android:orderInCategory="75"
        android:title="@string/action_logout"
        app:showAsAction="ifRoom"/>
        
    
</menu>